win_flex_bison-2.5.25/parser.output
Terminals unused in grammar

    INTERFACE
    CONSTRUCTOR
    NEW
    THIS
    DELETE
    EXPORT
    OF
    IN
    CONTINUE
    INCREMENT
    DECREMENT
    DECLARE
    IS


State 126 conflicts: 1 shift/reduce
State 174 conflicts: 1 shift/reduce
State 185 conflicts: 2 shift/reduce
State 186 conflicts: 1 shift/reduce
State 229 conflicts: 1 shift/reduce
State 236 conflicts: 1 shift/reduce
State 275 conflicts: 1 shift/reduce
State 276 conflicts: 1 shift/reduce
State 329 conflicts: 1 shift/reduce
State 334 conflicts: 1 shift/reduce
State 381 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program_elem
    2        | program program_elem

    3 program_elem: class_declaration
    4             | function_declaration

    5 endl: ENDL
    6     | endl ENDL

    7 endl_opt: %empty
    8         | endl

    9 stmt_sep: ';'
   10         | endl

   11 expr_list: expr
   12          | expr_list endl_opt ',' endl_opt expr

   13 expr_list_opt: %empty
   14              | expr_list

   15 expr: expr POST_DECREMENT
   16     | PREF_DECREMENT endl_opt expr
   17     | expr POST_INCREMENT
   18     | PREF_INCREMENT endl_opt expr
   19     | expr AS endl_opt type
   20     | '-' endl_opt expr
   21     | '+' endl_opt expr
   22     | NUMBER_LITERAL
   23     | STRING_LITERAL
   24     | TRUE_LITERAL
   25     | FALSE_LITERAL
   26     | ID
   27     | '(' endl_opt expr_list_opt ')'
   28     | expr '+' endl_opt expr
   29     | expr '-' endl_opt expr
   30     | expr '*' endl_opt expr
   31     | expr '/' endl_opt expr
   32     | expr '%' endl_opt expr
   33     | expr '<' endl_opt expr
   34     | expr '>' endl_opt expr
   35     | expr LESS_OR_EQUAL endl_opt expr
   36     | expr GREATER_OR_EQUAL endl_opt expr
   37     | expr EQUALS endl_opt expr
   38     | expr NOT_EQUALS endl_opt expr
   39     | expr '=' endl_opt expr
   40     | expr PLUS_ASSIGN endl_opt expr
   41     | expr MINUS_ASSIGN endl_opt expr
   42     | expr MUL_ASSIGN endl_opt expr
   43     | expr DIV_ASSIGN endl_opt expr
   44     | expr MOD_ASSIGN endl_opt expr
   45     | NOT endl_opt expr
   46     | expr AND endl_opt expr
   47     | expr OR endl_opt expr
   48     | expr '?' endl_opt expr endl_opt ':' endl_opt expr
   49     | expr '[' endl_opt expr endl_opt ']'
   50     | expr '.' endl_opt ID endl_opt '(' endl_opt expr_list_opt ')'
   51     | expr '.' endl_opt ID

   52 block_statement: '{' endl_opt stmt_list_opt '}'

   53 if_stmt: IF endl_opt '(' endl_opt expr endl_opt ')' endl_opt block_statement
   54        | IF endl_opt '(' endl_opt expr endl_opt ')' endl_opt expr stmt_sep
   55        | IF endl_opt '(' endl_opt expr endl_opt ')' endl_opt block_statement endl_opt ELSE endl_opt block_statement
   56        | IF endl_opt '(' endl_opt expr endl_opt ')' endl_opt block_statement endl_opt ELSE endl_opt expr stmt_sep
   57        | IF endl_opt '(' endl_opt expr endl_opt ')' endl_opt expr stmt_sep endl_opt ELSE endl_opt block_statement
   58        | IF endl_opt '(' endl_opt expr endl_opt ')' endl_opt expr stmt_sep endl_opt ELSE endl_opt expr stmt_sep

   59 while_stmt: WHILE endl_opt '(' endl_opt expr endl_opt ')' endl_opt stmt

   60 do_while_stmt: DO endl_opt stmt endl_opt WHILE endl_opt '(' endl_opt expr endl_opt ')'

   61 for_stmt: FOR endl_opt '(' endl_opt expr endl_opt ';' endl_opt expr endl_opt ';' endl_opt expr endl_opt ')' endl_opt stmt

   62 switch_stmt: SWITCH endl_opt '(' endl_opt expr endl_opt ')' endl_opt '{' endl_opt case_list '}'

   63 case_list: case_stmt
   64          | case_list case_stmt

   65 case_stmt: CASE endl_opt expr endl_opt ':' endl_opt stmt_list_opt break_opt
   66          | DEFAULT endl_opt ':' endl_opt stmt_list_opt break_opt

   67 break_opt: %empty
   68          | BREAK stmt_sep endl_opt

   69 return_statement: RETURN expr stmt_sep

   70 function_declaration: FUNC endl_opt ID endl_opt param_list_0_or_more type_mark endl_opt '{' endl_opt stmt_list_opt '}'
   71                     | FUNC endl_opt ID endl_opt param_list_0_or_more endl_opt '{' endl_opt stmt_list_opt '}'

   72 try_catch_block: TRY endl_opt block_statement endl_opt catch_clause

   73 catch_clause: CATCH endl_opt '(' endl_opt ID endl_opt ')' endl_opt block_statement
   74             | CATCH endl_opt '(' endl_opt ID endl_opt ':' endl_opt error_type endl_opt ')' endl_opt block_statement

   75 error_type: UNKNOWN
   76           | ANY

   77 stmt_list_opt: %empty
   78              | stmt_list endl_opt

   79 stmt_list: stmt
   80          | stmt_list stmt

   81 stmt: expr stmt_sep
   82     | if_stmt
   83     | while_stmt
   84     | for_stmt
   85     | do_while_stmt stmt_sep
   86     | switch_stmt
   87     | try_catch_block
   88     | block_statement
   89     | modifier endl_opt var_stmt
   90     | modifier endl_opt var_list stmt_sep
   91     | enum_declaration
   92     | return_statement
   93     | ';'

   94 modifier: LET
   95         | CONST

   96 type: NUMBER
   97     | STRING
   98     | BOOLEAN
   99     | ANY
  100     | UNKNOWN
  101     | VOID
  102     | ID

  103 type_mark: endl_opt ':' endl_opt type

  104 type_mark_opt: %empty
  105              | type_mark

  106 variable: ID type_mark_opt var_init_opt

  107 var_init_opt: %empty
  108             | endl_opt '=' endl_opt expr

  109 var_list: variable endl_opt ',' endl_opt variable
  110         | var_list endl_opt ',' endl_opt variable

  111 var_stmt: variable stmt_sep
  112         | ID type_mark endl_opt dimensions_list stmt_sep
  113         | ID type_mark dimensions_list endl_opt '=' endl_opt '[' endl_opt expr_list_opt ']' stmt_sep

  114 dimensions: '[' endl_opt ']'

  115 dimensions_list: dimensions
  116                | dimensions_list dimensions

  117 param: ID type_mark
  118      | ID endl_opt '?' type_mark

  119 param_list: param
  120           | param_list endl_opt ',' endl_opt param

  121 param_list_0_or_more: '(' endl_opt param_list endl_opt ')'
  122                     | '(' ')'

  123 implements_decl: IMPLEMENTS endl_opt ID
  124                | implements_decl endl_opt ',' endl_opt ID

  125 readonly_opt: %empty
  126             | READONLY endl_opt

  127 static_opt: %empty
  128           | STATIC endl_opt

  129 visibility: PRIVATE
  130           | PROTECTED
  131           | PUBLIC

  132 visibility_opt: %empty
  133               | visibility endl_opt

  134 class_member: visibility_opt static_opt readonly_opt var_stmt
  135             | visibility_opt static_opt readonly_opt ID endl_opt param_list_0_or_more type_mark_opt endl_opt '{' endl_opt stmt_list_opt '}'
  136             | visibility_opt static_opt class_declaration

  137 class_member_list: class_member
  138                  | class_member_list endl_opt class_member

  139 class_body: %empty
  140           | class_member_list endl_opt

  141 class_declaration: CLASS endl_opt ID endl_opt '{' endl_opt class_body '}'
  142                  | CLASS endl_opt ID endl_opt EXTENDS endl_opt ID endl_opt '{' endl_opt class_body '}'
  143                  | CLASS endl_opt ID endl_opt implements_decl endl_opt '{' endl_opt class_body '}'
  144                  | CLASS endl_opt ID endl_opt EXTENDS endl_opt ID implements_decl endl_opt '{' endl_opt class_body '}'

  145 enum_declaration: ENUM endl_opt ID endl_opt '{' endl_opt id_list endl_opt '}'

  146 id_list: ID var_init_opt
  147        | id_list endl_opt ',' endl_opt ID var_init_opt


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 32
    '(' (40) 27 50 53 54 55 56 57 58 59 60 61 62 73 74 121 122
    ')' (41) 27 50 53 54 55 56 57 58 59 60 61 62 73 74 121 122
    '*' (42) 30
    '+' (43) 21 28
    ',' (44) 12 109 110 120 124 147
    '-' (45) 20 29
    '.' (46) 50 51
    '/' (47) 31
    ':' (58) 48 65 66 74 103
    ';' (59) 9 61 93
    '<' (60) 33
    '=' (61) 39 108 113
    '>' (62) 34
    '?' (63) 48 118
    '[' (91) 49 113 114
    ']' (93) 49 113 114
    '{' (123) 52 62 70 71 135 141 142 143 144 145
    '}' (125) 52 62 70 71 135 141 142 143 144 145
    error (256)
    INTERFACE (258)
    IMPLEMENTS (259) 123
    CONSTRUCTOR (260)
    NEW (261)
    EXTENDS (262) 142 144
    THIS (263)
    CLASS (264) 141 142 143 144
    STATIC (265) 128
    RETURN (266) 69
    DELETE (267)
    EXPORT (268)
    PUBLIC (269) 131
    PROTECTED (270) 130
    PRIVATE (271) 129
    READONLY (272) 126
    DO (273) 60
    IF (274) 53 54 55 56 57 58
    ELSE (275) 55 56 57 58
    FOR (276) 61
    OF (277)
    IN (278)
    WHILE (279) 59 60
    BREAK (280) 68
    CONTINUE (281)
    DEFAULT (282) 66
    SWITCH (283) 62
    CASE (284) 65
    TRY (285) 72
    CATCH (286) 73 74
    INCREMENT (287)
    DECREMENT (288)
    LET (289) 94
    CONST (290) 95
    FUNC (291) 70 71
    DECLARE (292)
    UNKNOWN (293) 75 100
    ANY (294) 76 99
    NUMBER (295) 96
    STRING (296) 97
    VOID (297) 101
    BOOLEAN (298) 98
    ENUM (299) 145
    NUMBER_LITERAL (300) 22
    STRING_LITERAL (301) 23
    TRUE_LITERAL (302) 24
    FALSE_LITERAL (303) 25
    ID (304) 26 50 51 70 71 73 74 102 106 112 113 117 118 123 124 135 141 142 143 144 145 146 147
    ENDL (305) 5 6
    PLUS_ASSIGN (306) 40
    MINUS_ASSIGN (307) 41
    MUL_ASSIGN (308) 42
    DIV_ASSIGN (309) 43
    MOD_ASSIGN (310) 44
    OR (311) 47
    AND (312) 46
    EQUALS (313) 37
    NOT_EQUALS (314) 38
    LESS_OR_EQUAL (315) 35
    GREATER_OR_EQUAL (316) 36
    IS (317)
    AS (318) 19
    PREF_INCREMENT (319) 18
    PREF_DECREMENT (320) 16
    POST_INCREMENT (321) 17
    POST_DECREMENT (322) 15
    NOT (323) 45
    UPLUS (324)
    UMINUS (325)


Nonterminals, with rules where they appear

    $accept (90)
        on left: 0
    program (91)
        on left: 1 2
        on right: 0 2
    program_elem (92)
        on left: 3 4
        on right: 1 2
    endl (93)
        on left: 5 6
        on right: 6 8 10
    endl_opt (94)
        on left: 7 8
        on right: 12 16 18 19 20 21 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 65 66 68 70 71 72 73 74 78 89 90 103 108 109 110 112 113 114 118 120 121 123 124 126 128 133 135 138 140 141 142 143 144 145 147
    stmt_sep (95)
        on left: 9 10
        on right: 54 56 57 58 68 69 81 85 90 111 112 113
    expr_list (96)
        on left: 11 12
        on right: 12 14
    expr_list_opt (97)
        on left: 13 14
        on right: 27 50 113
    expr (98)
        on left: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51
        on right: 11 12 15 16 17 18 19 20 21 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 53 54 55 56 57 58 59 60 61 62 65 69 81 108
    block_statement (99)
        on left: 52
        on right: 53 55 56 57 72 73 74 88
    if_stmt (100)
        on left: 53 54 55 56 57 58
        on right: 82
    while_stmt (101)
        on left: 59
        on right: 83
    do_while_stmt (102)
        on left: 60
        on right: 85
    for_stmt (103)
        on left: 61
        on right: 84
    switch_stmt (104)
        on left: 62
        on right: 86
    case_list (105)
        on left: 63 64
        on right: 62 64
    case_stmt (106)
        on left: 65 66
        on right: 63 64
    break_opt (107)
        on left: 67 68
        on right: 65 66
    return_statement (108)
        on left: 69
        on right: 92
    function_declaration (109)
        on left: 70 71
        on right: 4
    try_catch_block (110)
        on left: 72
        on right: 87
    catch_clause (111)
        on left: 73 74
        on right: 72
    error_type (112)
        on left: 75 76
        on right: 74
    stmt_list_opt (113)
        on left: 77 78
        on right: 52 65 66 70 71 135
    stmt_list (114)
        on left: 79 80
        on right: 78 80
    stmt (115)
        on left: 81 82 83 84 85 86 87 88 89 90 91 92 93
        on right: 59 60 61 79 80
    modifier (116)
        on left: 94 95
        on right: 89 90
    type (117)
        on left: 96 97 98 99 100 101 102
        on right: 19 103
    type_mark (118)
        on left: 103
        on right: 70 105 112 113 117 118
    type_mark_opt (119)
        on left: 104 105
        on right: 106 135
    variable (120)
        on left: 106
        on right: 109 110 111
    var_init_opt (121)
        on left: 107 108
        on right: 106 146 147
    var_list (122)
        on left: 109 110
        on right: 90 110
    var_stmt (123)
        on left: 111 112 113
        on right: 89 134
    dimensions (124)
        on left: 114
        on right: 115 116
    dimensions_list (125)
        on left: 115 116
        on right: 112 113 116
    param (126)
        on left: 117 118
        on right: 119 120
    param_list (127)
        on left: 119 120
        on right: 120 121
    param_list_0_or_more (128)
        on left: 121 122
        on right: 70 71 135
    implements_decl (129)
        on left: 123 124
        on right: 124 143 144
    readonly_opt (130)
        on left: 125 126
        on right: 134 135
    static_opt (131)
        on left: 127 128
        on right: 134 135 136
    visibility (132)
        on left: 129 130 131
        on right: 133
    visibility_opt (133)
        on left: 132 133
        on right: 134 135 136
    class_member (134)
        on left: 134 135 136
        on right: 137 138
    class_member_list (135)
        on left: 137 138
        on right: 138 140
    class_body (136)
        on left: 139 140
        on right: 141 142 143 144
    class_declaration (137)
        on left: 141 142 143 144
        on right: 3 136
    enum_declaration (138)
        on left: 145
        on right: 91
    id_list (139)
        on left: 146 147
        on right: 145 147


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1
    FUNC   shift, and go to state 2

    program               go to state 3
    program_elem          go to state 4
    function_declaration  go to state 5
    class_declaration     go to state 6


State 1

  141 class_declaration: CLASS . endl_opt ID endl_opt '{' endl_opt class_body '}'
  142                  | CLASS . endl_opt ID endl_opt EXTENDS endl_opt ID endl_opt '{' endl_opt class_body '}'
  143                  | CLASS . endl_opt ID endl_opt implements_decl endl_opt '{' endl_opt class_body '}'
  144                  | CLASS . endl_opt ID endl_opt EXTENDS endl_opt ID implements_decl endl_opt '{' endl_opt class_body '}'

    ENDL  shift, and go to state 7

    $default  reduce using rule 7 (endl_opt)

    endl      go to state 8
    endl_opt  go to state 9


State 2

   70 function_declaration: FUNC . endl_opt ID endl_opt param_list_0_or_more type_mark endl_opt '{' endl_opt stmt_list_opt '}'
   71                     | FUNC . endl_opt ID endl_opt param_list_0_or_more endl_opt '{' endl_opt stmt_list_opt '}'

    ENDL  shift, and go to state 7

    $default  reduce using rule 7 (endl_opt)

    endl      go to state 8
    endl_opt  go to state 10


State 3

    0 $accept: program . $end
    2 program: program . program_elem

    $end   shift, and go to state 11
    CLASS  shift, and go to state 1
    FUNC   shift, and go to state 2

    program_elem          go to state 12
    function_declaration  go to state 5
    class_declaration     go to state 6


State 4

    1 program: program_elem .

    $default  reduce using rule 1 (program)


State 5

    4 program_elem: function_declaration .

    $default  reduce using rule 4 (program_elem)


State 6

    3 program_elem: class_declaration .

    $default  reduce using rule 3 (program_elem)


State 7

    5 endl: ENDL .

    $default  reduce using rule 5 (endl)


State 8

    6 endl: endl . ENDL
    8 endl_opt: endl .

    ENDL  shift, and go to state 13

    $default  reduce using rule 8 (endl_opt)


State 9

  141 class_declaration: CLASS endl_opt . ID endl_opt '{' endl_opt class_body '}'
  142                  | CLASS endl_opt . ID endl_opt EXTENDS endl_opt ID endl_opt '{' endl_opt class_body '}'
  143                  | CLASS endl_opt . ID endl_opt implements_decl endl_opt '{' endl_opt class_body '}'
  144                  | CLASS endl_opt . ID endl_opt EXTENDS endl_opt ID implements_decl endl_opt '{' endl_opt class_body '}'

    ID  shift, and go to state 14


State 10

   70 function_declaration: FUNC endl_opt . ID endl_opt param_list_0_or_more type_mark endl_opt '{' endl_opt stmt_list_opt '}'
   71                     | FUNC endl_opt . ID endl_opt param_list_0_or_more endl_opt '{' endl_opt stmt_list_opt '}'

    ID  shift, and go to state 15


State 11

    0 $accept: program $end .

    $default  accept


State 12

    2 program: program program_elem .

    $default  reduce using rule 2 (program)


State 13

    6 endl: endl ENDL .

    $default  reduce using rule 6 (endl)


State 14

  141 class_declaration: CLASS endl_opt ID . endl_opt '{' endl_opt class_body '}'
  142                  | CLASS endl_opt ID . endl_opt EXTENDS endl_opt ID endl_opt '{' endl_opt class_body '}'
  143                  | CLASS endl_opt ID . endl_opt implements_decl endl_opt '{' endl_opt class_body '}'
  144                  | CLASS endl_opt ID . endl_opt EXTENDS endl_opt ID implements_decl endl_opt '{' endl_opt class_body '}'

    ENDL  shift, and go to state 7

    $default  reduce using rule 7 (endl_opt)

    endl      go to state 8
    endl_opt  go to state 16


State 15

   70 function_declaration: FUNC endl_opt ID . endl_opt param_list_0_or_more type_mark endl_opt '{' endl_opt stmt_list_opt '}'
   71                     | FUNC endl_opt ID . endl_opt param_list_0_or_more endl_opt '{' endl_opt stmt_list_opt '}'

    ENDL  shift, and go to state 7

    $default  reduce using rule 7 (endl_opt)

    endl      go to state 8
    endl_opt  go to state 17


State 16

  141 class_declaration: CLASS endl_opt ID endl_opt . '{' endl_opt class_body '}'
  142                  | CLASS endl_opt ID endl_opt . EXTENDS endl_opt ID endl_opt '{' endl_opt class_body '}'
  143                  | CLASS endl_opt ID endl_opt . implements_decl endl_opt '{' endl_opt class_body '}'
  144                  | CLASS endl_opt ID endl_opt . EXTENDS endl_opt ID implements_decl endl_opt '{' endl_opt class_body '}'

    IMPLEMENTS  shift, and go to state 18
    EXTENDS     shift, and go to state 19
    '{'         shift, and go to state 20

    implements_decl  go to state 21


State 17

   70 function_declaration: FUNC endl_opt ID endl_opt . param_list_0_or_more type_mark endl_opt '{' endl_opt stmt_list_opt '}'
   71                     | FUNC endl_opt ID endl_opt . param_list_0_or_more endl_opt '{' endl_opt stmt_list_opt '}'

    '('  shift, and go to state 22

    param_list_0_or_more  go to state 23


State 18

  123 implements_decl: IMPLEMENTS . endl_opt ID

    ENDL  shift, and go to state 7

    $default  reduce using rule 7 (endl_opt)

    endl      go to state 8
    endl_opt  go to state 24


State 19

  142 class_declaration: CLASS endl_opt ID endl_opt EXTENDS . endl_opt ID endl_opt '{' endl_opt class_body '}'
  144                  | CLASS endl_opt ID endl_opt EXTENDS . endl_opt ID implements_decl endl_opt '{' endl_opt class_body '}'

    ENDL  shift, and go to state 7

    $default  reduce using rule 7 (endl_opt)

    endl      go to state 8
    endl_opt  go to state 25


State 20

  141 class_declaration: CLASS endl_opt ID endl_opt '{' . endl_opt class_body '}'

    ENDL  shift, and go to state 7

    $default  reduce using rule 7 (endl_opt)

    endl      go to state 8
    endl_opt  go to state 26


State 21

  124 implements_decl: implements_decl . endl_opt ',' endl_opt ID
  143 class_declaration: CLASS endl_opt ID endl_opt implements_decl . endl_opt '{' endl_opt class_body '}'

    ENDL  shift, and go to state 7

    $default  reduce using rule 7 (endl_opt)

    endl      go to state 8
    endl_opt  go to state 27


State 22

  121 param_list_0_or_more: '(' . endl_opt param_list endl_opt ')'
  122                     | '(' . ')'

    ENDL  shift, and go to state 7
    ')'   shift, and go to state 28

    $default  reduce using rule 7 (endl_opt)

    endl      go to state 8
    endl_opt  go to state 29


State 23

   70 function_declaration: FUNC endl_opt ID endl_opt param_list_0_or_more . type_mark endl_opt '{' endl_opt stmt_list_opt '}'
   71                     | FUNC endl_opt ID endl_opt param_list_0_or_more . endl_opt '{' endl_opt stmt_list_opt '}'

    ENDL  shift, and go to state 7

    $default  reduce using rule 7 (endl_opt)

    endl       go to state 8
    endl_opt   go to state 30
    type_mark  go to state 31


State 24

  123 implements_decl: IMPLEMENTS endl_opt . ID

    ID  shift, and go to state 32


State 25

  142 class_declaration: CLASS endl_opt ID endl_opt EXTENDS endl_opt . ID endl_opt '{' endl_opt class_body '}'
  144                  | CLASS endl_opt ID endl_opt EXTENDS endl_opt . ID implements_decl endl_opt '{' endl_opt class_body '}'

    ID  shift, and go to state 33


State 26

  141 class_declaration: CLASS endl_opt ID endl_opt '{' endl_opt . class_body '}'

    PUBLIC     shift, and go to state 34
    PROTECTED  shift, and go to state 35
    PRIVATE    shift, and go to state 36

    '}'       reduce using rule 139 (class_body)
    $default  reduce using rule 132 (visibility_opt)

    visibility         go to state 37
    visibility_opt     go to state 38
    class_member       go to state 39
    class_member_list  go to state 40
    class_body         go to state 41


State 27

  124 implements_decl: implements_decl endl_opt . ',' endl_opt ID
  143 class_declaration: CLASS endl_opt ID endl_opt implements_decl endl_opt . '{' endl_opt class_body '}'

    ','  shift, and go to state 42
    '{'  shift, and go to state 43


State 28

  122 param_list_0_or_more: '(' ')' .

    $default  reduce using rule 122 (param_list_0_or_more)


State 29

  121 param_list_0_or_more: '(' endl_opt . param_list endl_opt ')'

    ID  shift, and go to state 44

    param       go to state 45
    param_list  go to state 46


State 30

   71 function_declaration: FUNC endl_opt ID endl_opt param_list_0_or_more endl_opt . '{' endl_opt stmt_list_opt '}'
  103 type_mark: endl_opt . ':' endl_opt type

    ':'  shift, and go to state 47
    '{'  shift, and go to state 48


State 31

   70 function_declaration: FUNC endl_opt ID endl_opt param_list_0_or_more type_mark . endl_opt '{' endl_opt stmt_list_opt '}'

    ENDL  shift, and go to state 7

    $default  reduce using rule 7 (endl_opt)

    endl      go to state 8
    endl_opt  go to state 49


State 32

  123 implements_decl: IMPLEMENTS endl_opt ID .

    $default  reduce using rule 123 (implements_decl)


State 33

  142 class_declaration: CLASS endl_opt ID endl_opt EXTENDS endl_opt ID . endl_opt '{' endl_opt class_body '}'
  144                  | CLASS endl_opt ID endl_opt EXTENDS endl_opt ID . implements_decl endl_opt '{' endl_opt class_body '}'

    IMPLEMENTS  shift, and go to state 18
    ENDL        shift, and go to state 7

    $default  reduce using rule 7 (endl_opt)

    endl             go to state 8
    endl_opt         go to state 50
    implements_decl  go to state 51


State 34

  131 visibility: PUBLIC .

    $default  reduce using rule 131 (visibility)


State 35

  130 visibility: PROTECTED .

    $default  reduce using rule 130 (visibility)


State 36

  129 visibility: PRIVATE .

    $default  reduce using rule 129 (visibility)


State 37

  133 visibility_opt: visibility . endl_opt

    ENDL  shift, and go to state 7

    $default  reduce using rule 7 (endl_opt)

    endl      go to state 8
    endl_opt  go to state 52


State 38

  134 class_member: visibility_opt . static_opt readonly_opt var_stmt
  135             | visibility_opt . static_opt readonly_opt ID endl_opt param_list_0_or_more type_mark_opt endl_opt '{' endl_opt stmt_list_opt '}'
  136             | visibility_opt . static_opt class_declaration

    STATIC  shift, and go to state 53

    $default  reduce using rule 127 (static_opt)

    static_opt  go to state 54


State 39

  137 class_member_list: class_member .

    $default  reduce using rule 137 (class_member_list)


State 40

  138 class_member_list: class_member_list . endl_opt class_member
  140 class_body: class_member_list . endl_opt

    ENDL  shift, and go to state 7

    $default  reduce using rule 7 (endl_opt)

    endl      go to state 8
    endl_opt  go to state 55


State 41

  141 class_declaration: CLASS endl_opt ID endl_opt '{' endl_opt class_body . '}'

    '}'  shift, and go to state 56


State 42

  124 implements_decl: implements_decl endl_opt ',' . endl_opt ID

    ENDL  shift, and go to state 7

    $default  reduce using rule 7 (endl_opt)

    endl      go to state 8
    endl_opt  go to state 57


State 43

  143 class_declaration: CLASS endl_opt ID endl_opt implements_decl endl_opt '{' . endl_opt class_body '}'

    ENDL  shift, and go to state 7

    $default  reduce using rule 7 (endl_opt)

    endl      go to state 8
    endl_opt  go to state 58


State 44

  117 param: ID . type_mark
  118      | ID . endl_opt '?' type_mark

    ENDL  shift, and go to state 7

    $default  reduce using rule 7 (endl_opt)

    endl       go to state 8
    endl_opt   go to state 59
    type_mark  go to state 60


State 45

  119 param_list: param .

    $default  reduce using rule 119 (param_list)


State 46

  120 param_list: param_list . endl_opt ',' endl_opt param
  121 param_list_0_or_more: '(' endl_opt param_list . endl_opt ')'

    ENDL  shift, and go to state 7

    $default  reduce using rule 7 (endl_opt)

    endl      go to state 8
    endl_opt  go to state 61


State 47

  103 type_mark: endl_opt ':' . endl_opt type

    ENDL  shift, and go to state 7

    $default  reduce using rule 7 (endl_opt)

    endl      go to state 8
    endl_opt  go to state 62


State 48

   71 function_declaration: FUNC endl_opt ID endl_opt param_list_0_or_more endl_opt '{' . endl_opt stmt_list_opt '}'

    ENDL  shift, and go to state 7

    $default  reduce using rule 7 (endl_opt)

    endl      go to state 8
    endl_opt  go to state 63


State 49

   70 function_declaration: FUNC endl_opt ID endl_opt param_list_0_or_more type_mark endl_opt . '{' endl_opt stmt_list_opt '}'

    '{'  shift, and go to state 64


State 50

  142 class_declaration: CLASS endl_opt ID endl_opt EXTENDS endl_opt ID endl_opt . '{' endl_opt class_body '}'

    '{'  shift, and go to state 65


State 51

  124 implements_decl: implements_decl . endl_opt ',' endl_opt ID
  144 class_declaration: CLASS endl_opt ID endl_opt EXTENDS endl_opt ID implements_decl . endl_opt '{' endl_opt class_body '}'

    ENDL  shift, and go to state 7

    $default  reduce using rule 7 (endl_opt)

    endl      go to state 8
    endl_opt  go to state 66


State 52

  133 visibility_opt: visibility endl_opt .

    $default  reduce using rule 133 (visibility_opt)


State 53

  128 static_opt: STATIC . endl_opt

    ENDL  shift, and go to state 7

    $default  reduce using rule 7 (endl_opt)

    endl      go to state 8
    endl_opt  go to state 67


State 54

  134 class_member: visibility_opt static_opt . readonly_opt var_stmt
  135             | visibility_opt static_opt . readonly_opt ID endl_opt param_list_0_or_more type_mark_opt endl_opt '{' endl_opt stmt_list_opt '}'
  136             | visibility_opt static_opt . class_declaration

    CLASS     shift, and go to state 1
    READONLY  shift, and go to state 68

    $default  reduce using rule 125 (readonly_opt)

    readonly_opt       go to state 69
    class_declaration  go to state 70


State 55

  138 class_member_list: class_member_list endl_opt . class_member
  140 class_body: class_member_list endl_opt .

    PUBLIC     shift, and go to state 34
    PROTECTED  shift, and go to state 35
    PRIVATE    shift, and go to state 36

    '}'       reduce using rule 140 (class_body)
    $default  reduce using rule 132 (visibility_opt)

    visibility      go to state 37
    visibility_opt  go to state 38
    class_member    go to state 71


State 56

  141 class_declaration: CLASS endl_opt ID endl_opt '{' endl_opt class_body '}' .

    $default  reduce using rule 141 (class_declaration)


State 57

  124 implements_decl: implements_decl endl_opt ',' endl_opt . ID

    ID  shift, and go to state 72


State 58

  143 class_declaration: CLASS endl_opt ID endl_opt implements_decl endl_opt '{' endl_opt . class_body '}'

    PUBLIC     shift, and go to state 34
    PROTECTED  shift, and go to state 35
    PRIVATE    shift, and go to state 36

    '}'       reduce using rule 139 (class_body)
    $default  reduce using rule 132 (visibility_opt)

    visibility         go to state 37
    visibility_opt     go to state 38
    class_member       go to state 39
    class_member_list  go to state 40
    class_body         go to state 73


State 59

  103 type_mark: endl_opt . ':' endl_opt type
  118 param: ID endl_opt . '?' type_mark

    '?'  shift, and go to state 74
    ':'  shift, and go to state 47


State 60

  117 param: ID type_mark .

    $default  reduce using rule 117 (param)


State 61

  120 param_list: param_list endl_opt . ',' endl_opt param
  121 param_list_0_or_more: '(' endl_opt param_list endl_opt . ')'

    ')'  shift, and go to state 75
    ','  shift, and go to state 76


State 62

  103 type_mark: endl_opt ':' endl_opt . type

    UNKNOWN  shift, and go to state 77
    ANY      shift, and go to state 78
    NUMBER   shift, and go to state 79
    STRING   shift, and go to state 80
    VOID     shift, and go to state 81
    BOOLEAN  shift, and go to state 82
    ID       shift, and go to state 83

    type  go to state 84


State 63

   71 function_declaration: FUNC endl_opt ID endl_opt param_list_0_or_more endl_opt '{' endl_opt . stmt_list_opt '}'

    RETURN          shift, and go to state 85
    DO              shift, and go to state 86
    IF              shift, and go to state 87
    FOR             shift, and go to state 88
    WHILE           shift, and go to state 89
    SWITCH          shift, and go to state 90
    TRY             shift, and go to state 91
    LET             shift, and go to state 92
    CONST           shift, and go to state 93
    ENUM            shift, and go to state 94
    NUMBER_LITERAL  shift, and go to state 95
    STRING_LITERAL  shift, and go to state 96
    TRUE_LITERAL    shift, and go to state 97
    FALSE_LITERAL   shift, and go to state 98
    ID              shift, and go to state 99
    ';'             shift, and go to state 100
    '+'             shift, and go to state 101
    '-'             shift, and go to state 102
    PREF_INCREMENT  shift, and go to state 103
    PREF_DECREMENT  shift, and go to state 104
    NOT             shift, and go to state 105
    '('             shift, and go to state 106
    '{'             shift, and go to state 107

    $default  reduce using rule 77 (stmt_list_opt)

    expr              go to state 108
    block_statement   go to state 109
    if_stmt           go to state 110
    while_stmt        go to state 111
    do_while_stmt     go to state 112
    for_stmt          go to state 113
    switch_stmt       go to state 114
    return_statement  go to state 115
    try_catch_block   go to state 116
    stmt_list_opt     go to state 117
    stmt_list         go to state 118
    stmt              go to state 119
    modifier          go to state 120
    enum_declaration  go to state 121


State 64

   70 function_declaration: FUNC endl_opt ID endl_opt param_list_0_or_more type_mark endl_opt '{' . endl_opt stmt_list_opt '}'

    ENDL  shift, and go to state 7

    $default  reduce using rule 7 (endl_opt)

    endl      go to state 8
    endl_opt  go to state 122


State 65

  142 class_declaration: CLASS endl_opt ID endl_opt EXTENDS endl_opt ID endl_opt '{' . endl_opt class_body '}'

    ENDL  shift, and go to state 7

    $default  reduce using rule 7 (endl_opt)

    endl      go to state 8
    endl_opt  go to state 123


State 66

  124 implements_decl: implements_decl endl_opt . ',' endl_opt ID
  144 class_declaration: CLASS endl_opt ID endl_opt EXTENDS endl_opt ID implements_decl endl_opt . '{' endl_opt class_body '}'

    ','  shift, and go to state 42
    '{'  shift, and go to state 124


State 67

  128 static_opt: STATIC endl_opt .

    $default  reduce using rule 128 (static_opt)


State 68

  126 readonly_opt: READONLY . endl_opt

    ENDL  shift, and go to state 7

    $default  reduce using rule 7 (endl_opt)

    endl      go to state 8
    endl_opt  go to state 125


State 69

  134 class_member: visibility_opt static_opt readonly_opt . var_stmt
  135             | visibility_opt static_opt readonly_opt . ID endl_opt param_list_0_or_more type_mark_opt endl_opt '{' endl_opt stmt_list_opt '}'

    ID  shift, and go to state 126

    variable  go to state 127
    var_stmt  go to state 128


State 70

  136 class_member: visibility_opt static_opt class_declaration .

    $default  reduce using rule 136 (class_member)


State 71
